<resources>
    <string name="app_name">NEWSBOOK</string>
    <!--    login screen-->
    <string name="login">Login</string>
    <string name="createAcct">Create a new account</string>
    <string name="signUp">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <!--    register screen-->
    <string name="name">Name</string>
    <string name="confirmPassword">Confirm password</string>
    <!--    news preferences screen-->
    <string name="newspreferencesTitle">News Preferences</string>
    <string name="subtitle">Select your preferred categories</string>
    <string name="select">Minimum 2 categories</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="tech">Technology</string>
    <string name="submit">Submit</string>
    <!--    main NEWS screen-->
    <string name="bullet">•</string>
    <!--    bookmark screen-->
    <string name="bookmark">Bookmarks</string>
    <!--    like/dislike screen-->
    <string name="likedisliketitle">like/dislike History</string>
    <!--    view settings screen-->
    <string name="viewsettingstitle">Settings</string>
    <!--    account screen-->
    <string name="accounttitle">Account</string>
    <string name="accountdesc">Update my details</string>
    <string name="accountname">Name (optional)</string>
    <string name="phone">Phone (optional)</string>
    <string name="update">Update</string>

</resources>
